--- a/index.html
+++ b/index.html
@@ -96,30 +96,40 @@
         </ul>
       </div>
     </section>
-    <section class="container ourteam-section section">
-      <h2 class="ourteam-title">Our Team</h2>
-      <ul class="list ourteam-list">
-        <li class="ourteam-card">
-          <img class="block-image" src="./images/img.jpg" width="264" alt="Mark Guerrero - Product Designer">
-          <h3 class="ourteam-header">Mark Guerrero</h3>
-          <p class="ourteam-p">Product Designer</p>
-        </li>
-        <li class="ourteam-card">
-          <img class="block-image" src="./images/imgteam1.jpg" width="264" alt="Tom Ford - Frontend Developer">
-          <h3 class="ourteam-header">Tom Ford</h3>
-          <p class="ourteam-p">Frontend Developer</p>
-        </li>
-        <li class="ourteam-card">
-          <img class="block-image" src="./images/imgteam2.jpg" width="264" alt="Camila Garcia - Marketing">
-          <h3 class="ourteam-header">Camila Garcia</h3>
-          <p class="ourteam-p">Marketing</p>
-        </li>
-        <li class="ourteam-card">
-          <img class="block-image" src="./images/imgteam3.jpg" width="264" alt="Daniel Wilson - UI Designer">
-          <h3 class="ourteam-header">Daniel Wilson</h3>
-          <p class="ourteam-p">UI Designer</p>
-        </li>
-      </ul>
+    <section class="ourteam-section section">
+      <div class="container">
+        <h2 class="ourteam-title ourteam-headertwo">Our Team</h2>
+        <ul class="list ourteam-list">
+          <li class="ourteam-card ourteam-item">
+            <img class="block-image" src="./images/img.jpg" width="264" alt="Mark Guerrero - Product Designer">
+            <div class="ourteam-body-card">
+              <h3 class="ourteam-header ourteam-body-title">Mark Guerrero</h3>
+              <p class="ourteam-p ourteam-body-p">Product Designer</p>
+            </div>
+          </li>
+          <li class="ourteam-card ourteam-item">
+            <img class="block-image" src="./images/imgteam1.jpg" width="264" alt="Tom Ford - Frontend Developer">
+            <div class="ourteam-body-card">
+              <h3 class="ourteam-header ourteam-body-title">Tom Ford</h3>
+              <p class="ourteam-p ourteam-body-p">Frontend Developer</p>
+            </div>
+          </li>
+          <li class="ourteam-card ourteam-item">
+            <img class="block-image" src="./images/imgteam2.jpg" width="264" alt="Camila Garcia - Marketing">
+            <div class="ourteam-body-card">
+              <h3 class="ourteam-header ourteam-body-title">Camila Garcia</h3>
+              <p class="ourteam-p ourteam-body-p">Marketing</p>
+            </div>
+          </li>
+          <li class="ourteam-card ourteam-item">
+            <img class="block-image" src="./images/imgteam3.jpg" width="264" alt="Daniel Wilson - UI Designer">
+            <div class="ourteam-body-card">
+              <h3 class="ourteam-header ourteam-body-title">Daniel Wilson</h3>
+              <p class="ourteam-p ourteam-body-p">UI Designer</p>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
   <footer class="container footer-section section">
