--- a/portfolio.html
+++ b/portfolio.html
@@ -12,128 +12,152 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.min.css">
   <link rel="stylesheet" href="./css/styles.css">
   <title>Homework #2 - Portfolio</title>
 </head>
 
 <body>
-  <header class="container header-class">
-    <nav class="navbar-nav">
-      <a class="logo link" href="./index.html">Web<span class="nav-logo-span">Studio</span></a>
-      <ul class="list">
-        <li>
-          <a class="nav-list-item link" href="./index.html">Studio</a>
-        </li>
-        <li>
-          <a class="nav-list-item link" href="./portfolio.html">Portfolio</a>
-        </li>
-        <li>
-          <a class="nav-list-item link" href="">Contacts</a>
-        </li>
-      </ul>
-    </nav>
-    <address class="address-section">
-      <ul class="list">
-        <li>
-          <a class="addr-a link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a class="addr-a link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
-    </address>
+  <header class="header">
+    <div class="container container-header">
+      <nav class="navbar-nav">
+        <a class="logo link logo-header" href="./index.html">Web<span class="nav-logo-span">Studio</span></a>
+        <ul class="list navbar-list">
+          <li>
+            <a class="nav-list-item nav-item link" href="./index.html">Studio</a>
+          </li>
+          <li>
+            <a class="nav-list-item nav-item link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a class="nav-list-item nav-item link" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address class="address-section">
+        <ul class="list address-list">
+          <li>
+            <a class="addr-a link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a class="addr-a link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
+    </div>
   </header>
   <main>
-    <section class="container">
-      <h1 class="features-title">Portfolio</h1>
-      <ul class="list">
-        <li>
-          <button class="portfolio-btn" type="button">All</button>
-        </li>
-        <li>
-          <button class="portfolio-btn" type="button">Web Site</button>
-        </li>
-        <li>
-          <button class="portfolio-btn" type="button">App</button>
-        </li>
-        <li>
-          <button class="portfolio-btn" type="button">Design</button>
-        </li>
-        <li>
-          <button class="portfolio-btn" type="button">Marketing</button>
-        </li>
-      </ul>
-      <ul class="list portfolio-cards">
-        <li class="cards">
-          <a class="link" href="#">
-            <img src="./images/banking.jpg" width="360" alt="Banking">
-            <h2 class="portfolio-filters-header">Banking App Interface Concept</h2>
-            <p class="portfolio-filters-p">App</p>
-          </a>
-        </li>
-        <li class="cards">
-          <a class="link" href="#">
-            <img src="./images/cashless.jpg" width="360" alt="Cashless Payment">
-            <h2 class="portfolio-filters-header">Cashless Payment</h2>
-            <p class="portfolio-filters-p">Marketing</p>
-          </a>
-        </li>
-        <li class="cards">
-          <a class="link" href="#">
-            <img src="./images/meditation.jpg" width="360" alt="Meditation App">
-            <h2 class="portfolio-filters-header">Meditation App</h2>
-            <p class="portfolio-filters-p">App</p>
-          </a>
-        </li>
-        <li class="cards">
-          <a class="link" href="#">
-            <img src="./images/taxiservice.jpg" width="360" alt="Taxi Service">
-            <h2 class="portfolio-filters-header">Taxi Service</h2>
-            <p class="portfolio-filters-p">Marketing</p>
-          </a>
-        </li>
-        <li class="cards">
-          <a class="link" href="#">
-            <img src="./images/screenill.jpg" width="360" alt="Screen Illustrations">
-            <h2 class="portfolio-filters-header">Screen Illustrations</h2>
-            <p class="portfolio-filters-p">Design</p>
-          </a>
-        </li>
-        <li class="cards">
-          <a class="link" href="#">
-            <img src="./images/beautifulsmile.jpg" width="360" alt="Online Courses">
-            <h2 class="portfolio-filters-header">Online Courses</h2>
-            <p class="portfolio-filters-p">Marketing</p>
-          </a>
-        </li>
-        <li class="cards">
-          <a class="link" href="#">
-            <img src="./images/igstories.jpg" width="360" alt="Instagram Stories Concept">
-            <h2 class="portfolio-filters-header">Instagram Stories Concept</h2>
-            <p class="portfolio-filters-p">Design</p>
-          </a>
-        </li>
-        <li class="cards">
-          <a class="link" href="#">
-            <img src="./images/food.jpg" width="360" alt="Organic Food">
-            <h2 class="portfolio-filters-header">Organic Food</h2>
-            <p class="portfolio-filters-p">Web Site</p>
-          </a>
-        </li>
-        <li class="cards">
-          <a class="link" href="#">
-            <img src="./images/freshcoffee.jpg" width="360" alt="Fresh Coffee">
-            <h2 class="portfolio-filters-header">Fresh Coffee</h2>
-            <p class="portfolio-filters-p">Web Site</p>
-          </a>
-        </li>
-      </ul>
+    <section class="portfolio-section">
+      <div class="container">
+        <h1 class="features-title visually-hidden">Portfolio</h1>
+        <ul class="list portfolio-list">
+          <li>
+            <button class="portfolio-btn portfolio-button" type="button">All</button>
+          </li>
+          <li>
+            <button class="portfolio-btn portfolio-button" type="button">Web Site</button>
+          </li>
+          <li>
+            <button class="portfolio-btn portfolio-button" type="button">App</button>
+          </li>
+          <li>
+            <button class="portfolio-btn portfolio-button" type="button">Design</button>
+          </li>
+          <li>
+            <button class="portfolio-btn portfolio-button" type="button">Marketing</button>
+          </li>
+        </ul>
+        <ul class="list portfolio-cards">
+          <li class="cards portfolio-item">
+            <a class="link" href="#">
+              <img src="./images/banking.jpg" width="360" alt="Banking">
+              <div class="container-card">
+                <h2 class="portfolio-filters-header">Banking App Interface Concept</h2>
+                <p class="portfolio-filters-p">App</p>
+              </div>
+            </a>
+          </li>
+          <li class="cards portfolio-item">
+            <a class="link" href="#">
+              <img src="./images/cashless.jpg" width="360" alt="Cashless Payment">
+              <div class="container-card">
+                <h2 class="portfolio-filters-header">Cashless Payment</h2>
+                <p class="portfolio-filters-p">Marketing</p>
+              </div>
+            </a>
+          </li>
+          <li class="cards portfolio-item">
+            <a class="link" href="#">
+              <img src="./images/meditation.jpg" width="360" alt="Meditation App">
+              <div class="container-card">
+                <h2 class="portfolio-filters-header">Meditation App</h2>
+                <p class="portfolio-filters-p">App</p>
+              </div>
+            </a>
+          </li>
+          <li class="cards portfolio-item">
+            <a class="link" href="#">
+              <img src="./images/taxiservice.jpg" width="360" alt="Taxi Service">
+              <div class="container-card">
+                <h2 class="portfolio-filters-header">Taxi Service</h2>
+                <p class="portfolio-filters-p">Marketing</p>
+              </div>
+            </a>
+          </li>
+          <li class="cards portfolio-item">
+            <a class="link" href="#">
+              <img src="./images/screenill.jpg" width="360" alt="Screen Illustrations">
+              <div class="container-card">
+                <h2 class="portfolio-filters-header">Screen Illustrations</h2>
+                <p class="portfolio-filters-p">Design</p>
+              </div>
+            </a>
+          </li>
+          <li class="cards portfolio-item">
+            <a class="link" href="#">
+              <img src="./images/beautifulsmile.jpg" width="360" alt="Online Courses">
+              <div class="container-card">
+                <h2 class="portfolio-filters-header">Online Courses</h2>
+                <p class="portfolio-filters-p">Marketing</p>
+              </div>
+            </a>
+          </li>
+          <li class="cards portfolio-item">
+            <a class="link" href="#">
+              <img src="./images/igstories.jpg" width="360" alt="Instagram Stories Concept">
+              <div class="container-card">
+                <h2 class="portfolio-filters-header">Instagram Stories Concept</h2>
+                <p class="portfolio-filters-p">Design</p>
+              </div>
+            </a>
+          </li>
+          <li class="cards portfolio-item">
+            <a class="link" href="#">
+              <img src="./images/food.jpg" width="360" alt="Organic Food">
+              <div class="container-card">
+                <h2 class="portfolio-filters-header">Organic Food</h2>
+                <p class="portfolio-filters-p">Web Site</p>
+              </div>
+            </a>
+          </li>
+          <li class="cards portfolio-item">
+            <a class="link" href="#">
+              <img src="./images/freshcoffee.jpg" width="360" alt="Fresh Coffee">
+              <div class="container-card">
+                <h2 class="portfolio-filters-header">Fresh Coffee</h2>
+                <p class="portfolio-filters-p">Web Site</p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
   <footer class="container footer-section section">
     <div class="container">
       <a class="footer-logo link" href="./index.html">Web<span class="logo-span">Studio</span></a>
-      <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth
+        solutions.</p>
     </div>
   </footer>
 </body>
