--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
   <main>
     <section class="portfolio-section">
       <div class="container">
-        <h1 class="features-title visually-hidden">Portfolio</h1>
+        <h1 class="visually-hidden">Portfolio</h1>
         <ul class="list portfolio-list">
           <li>
             <button class="portfolio-btn portfolio-button" type="button">All</button>
@@ -70,7 +70,7 @@
         <ul class="list portfolio-cards">
           <li class="cards portfolio-item">
             <a class="link" href="#">
-              <img src="./images/banking.jpg" width="360" alt="Banking">
+              <img class="block-image" src="./images/banking.jpg" width="360" alt="Banking">
               <div class="container-card">
                 <h2 class="portfolio-filters-header">Banking App Interface Concept</h2>
                 <p class="portfolio-filters-p">App</p>
@@ -79,7 +79,7 @@
           </li>
           <li class="cards portfolio-item">
             <a class="link" href="#">
-              <img src="./images/cashless.jpg" width="360" alt="Cashless Payment">
+              <img class="block-image" src="./images/cashless.jpg" width="360" alt="Cashless Payment">
               <div class="container-card">
                 <h2 class="portfolio-filters-header">Cashless Payment</h2>
                 <p class="portfolio-filters-p">Marketing</p>
@@ -88,7 +88,7 @@
           </li>
           <li class="cards portfolio-item">
             <a class="link" href="#">
-              <img src="./images/meditation.jpg" width="360" alt="Meditation App">
+              <img class="block-image" src="./images/meditation.jpg" width="360" alt="Meditation App">
               <div class="container-card">
                 <h2 class="portfolio-filters-header">Meditation App</h2>
                 <p class="portfolio-filters-p">App</p>
@@ -97,7 +97,7 @@
           </li>
           <li class="cards portfolio-item">
             <a class="link" href="#">
-              <img src="./images/taxiservice.jpg" width="360" alt="Taxi Service">
+              <img class="block-image" src="./images/taxiservice.jpg" width="360" alt="Taxi Service">
               <div class="container-card">
                 <h2 class="portfolio-filters-header">Taxi Service</h2>
                 <p class="portfolio-filters-p">Marketing</p>
@@ -106,7 +106,7 @@
           </li>
           <li class="cards portfolio-item">
             <a class="link" href="#">
-              <img src="./images/screenill.jpg" width="360" alt="Screen Illustrations">
+              <img class="block-image" src="./images/screenill.jpg" width="360" alt="Screen Illustrations">
               <div class="container-card">
                 <h2 class="portfolio-filters-header">Screen Illustrations</h2>
                 <p class="portfolio-filters-p">Design</p>
@@ -115,7 +115,7 @@
           </li>
           <li class="cards portfolio-item">
             <a class="link" href="#">
-              <img src="./images/beautifulsmile.jpg" width="360" alt="Online Courses">
+              <img class="block-image" src="./images/beautifulsmile.jpg" width="360" alt="Online Courses">
               <div class="container-card">
                 <h2 class="portfolio-filters-header">Online Courses</h2>
                 <p class="portfolio-filters-p">Marketing</p>
@@ -124,7 +124,7 @@
           </li>
           <li class="cards portfolio-item">
             <a class="link" href="#">
-              <img src="./images/igstories.jpg" width="360" alt="Instagram Stories Concept">
+              <img class="block-image" src="./images/igstories.jpg" width="360" alt="Instagram Stories Concept">
               <div class="container-card">
                 <h2 class="portfolio-filters-header">Instagram Stories Concept</h2>
                 <p class="portfolio-filters-p">Design</p>
@@ -133,7 +133,7 @@
           </li>
           <li class="cards portfolio-item">
             <a class="link" href="#">
-              <img src="./images/food.jpg" width="360" alt="Organic Food">
+              <img class="block-image" src="./images/food.jpg" width="360" alt="Organic Food">
               <div class="container-card">
                 <h2 class="portfolio-filters-header">Organic Food</h2>
                 <p class="portfolio-filters-p">Web Site</p>
@@ -142,7 +142,7 @@
           </li>
           <li class="cards portfolio-item">
             <a class="link" href="#">
-              <img src="./images/freshcoffee.jpg" width="360" alt="Fresh Coffee">
+              <img class="block-image" src="./images/freshcoffee.jpg" width="360" alt="Fresh Coffee">
               <div class="container-card">
                 <h2 class="portfolio-filters-header">Fresh Coffee</h2>
                 <p class="portfolio-filters-p">Web Site</p>
