--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
     <section class="section">
       <div class="container">
-        <h2 class="visually-hidden">Features</h2>
+        <h2 class="features-title">Features</h2>
         <ul class="list features-list">
           <li class="features-card">
             <h3 class="features-header header-card">Strategy</h3>
