--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
   <main>
     <section class="portfolio-section">
       <div class="container">
-        <h1 class="features-title">Portfolio</h1>
+        <h1 class="features-title visually-hidden" aria-hidden="true">Portfolio</h1>
         <ul class="list portfolio-list">
           <li>
             <button class="portfolio-btn portfolio-button" type="button">All</button>
